# rs-data-pipeline

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
backend/: index.js  package-lock.json  package.json
backend/config/: database.js
backend/models/: Execution.js  Flow.js
backend/routes/: executions.js  flows.js
backend/services/: executor.js  scheduler.js
frontend/: package-lock.json  package.json  server.js
frontend/src/: api.js  index.html  router.js
frontend/src/components/: App.js
frontend/src/views/: Dashboard.js  ExecutionDetail.js  ExecutionsList.js  FlowDetail.js  FlowsList.js
rust-flows/: Cargo.toml
rust-flows/src/: lib.rs  main.rs
