[package]
name = "rust-flows"
version = "0.1.0"
edition = "2021"
description = "Data flow processing for data pipeline system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
